KUrlNavigator: check if typed text matches a relative dir first

Test plan:
- Open e.g. Dolphin at ~/, in the url bar replace all the text with
  ".config", Enter
- it displays an error "Invalid protocol"
- Apply patch and try again, it should open ~/.config as expected

BUG: 353883
FIXED-IN: 5.98